--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
