--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
     "eslint": "^8.41.0",
@@ -30,6 +31,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.29"
