--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.29",
+    "typeorm-pagination": "^2.0.3",
     "uuid": "^9.0.0"
   }
 }
